force-app/main/default/objects/Service_Setting__mdt/Service_Setting__mdt.object-meta.xml
<CustomObject>
    <description>This object is used to manage all Services(APIs) used in the system.</description>
    <label>Service Setting</label>
    <pluralLabel>Service Settings</pluralLabel>
</CustomObject>