force-app/main/default/objects/Service_Setting__mdt/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Contains the API method name</description>
    <inlineHelpText>Contains the API method name</inlineHelpText>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>