force-app/main/default/objects/Service_Setting__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>Contains the Named Credential API name</description>
    <inlineHelpText>Named Credential API name</inlineHelpText>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>