force-app/main/default/objects/Service_Setting__mdt/fields/Request_Header_Values__c.field-meta.xml
<CustomField>
    <fullName>Request_Header_Values__c</fullName>
    <description>Used to store Request Header Values</description>
    <inlineHelpText>API Request Header Values, names should be comma separated.</inlineHelpText>
    <label>Request Header Values</label>
    <type>TextArea</type>
</CustomField>