force-app/main/default/objects/Service_Setting__mdt/fields/RequestHeaderKeys__c.field-meta.xml
<CustomField>
    <fullName>RequestHeaderKeys__c</fullName>
    <description>Used to store API header keys</description>
    <inlineHelpText>API header keys, and names should be comma separated.</inlineHelpText>
    <label>Request Header Keys</label>
    <type>TextArea</type>
</CustomField>