force-app/main/default/objects/Service_Setting__mdt/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <description>contains API endpoint path</description>
    <inlineHelpText>API endpoint Path</inlineHelpText>
    <label>Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>